@@ -47,7 +47,6 @@ import java.util.Properties;
 import java.util.Queue;
 import java.util.ServiceLoader;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.eclipse.jetty.util.ExceptionUtil;
@@ -57,9 +56,11 @@ import org.eclipse.jetty.util.Pool;
 import org.eclipse.jetty.util.StringUtil;
 import org.eclipse.jetty.util.TypeUtil;
 import org.eclipse.jetty.util.annotation.Name;
+import org.eclipse.jetty.util.component.ContainerLifeCycle;
 import org.eclipse.jetty.util.component.Environment;
 import org.eclipse.jetty.util.component.LifeCycle;
 import org.eclipse.jetty.util.resource.Resource;
+import org.eclipse.jetty.util.resource.ResourceFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xml.sax.SAXException;
@@ -97,7 +98,7 @@ public class XmlConfiguration
         };
     private static final List<ConfigurationProcessorFactory> PROCESSOR_FACTORIES = TypeUtil.serviceProviderStream(ServiceLoader.load(ConfigurationProcessorFactory.class))
         .flatMap(p -> Stream.of(p.get()))
-        .collect(Collectors.toList());
+        .toList();
     private static final Pool<ConfigurationParser> __parsers =
         new Pool<>(Pool.StrategyType.THREAD_ID, Math.min(8, Runtime.getRuntime().availableProcessors()));
     public static final Comparator<Executable> EXECUTABLE_COMPARATOR = (e1, e2) ->
@@ -217,23 +218,23 @@ public class XmlConfiguration
      */
     public XmlConfiguration(Resource resource) throws SAXException, IOException
     {
-        this(resource.getPath(), null, null);
+        this(resource, null, null);
     }
 
     /**
      * Reads and parses the XML configuration file.
      *
-     * @param path the XML configuration
+     * @param resource the Resource to the XML configuration
      * @param idMap Map of objects with IDs
      * @param properties Map of properties
      * @throws IOException if the configuration could not be read
      * @throws SAXException if the configuration could not be parsed
      */
-    public XmlConfiguration(Path path, Map<String, Object> idMap, Map<String, String> properties) throws SAXException, IOException
+    public XmlConfiguration(Resource resource, Map<String, Object> idMap, Map<String, String> properties) throws SAXException, IOException
     {
-        try (ConfigurationParser parser = getParser(); InputStream inputStream = Files.newInputStream(path))
+        try (ConfigurationParser parser = getParser(); InputStream inputStream = resource.newInputStream())
         {
-            _location = Resource.newResource(path);
+            _location = resource;
             setConfig(parser.parse(inputStream));
             _dtd = parser.getDTD();
             _idMap = idMap == null ? new HashMap<>() : idMap;
@@ -1831,6 +1832,8 @@ public class XmlConfiguration
             XmlConfiguration lastEnvConfiguration = null;
             XmlConfiguration lastCoreConfiguration = null;
             List<Object> objects = new ArrayList<>();
+            ContainerLifeCycle mountContainer = new ContainerLifeCycle();
+            objects.add(mountContainer);
 
             for (int i = 0; i < args.length; i++)
             {
@@ -1885,7 +1888,7 @@ public class XmlConfiguration
                         }
                         else if (arg.toLowerCase(Locale.ENGLISH).endsWith(".properties"))
                         {
-                            Resource resource = Resource.newResource(arg);
+                            Resource resource = ResourceFactory.of(mountContainer).newResource(arg);
                             try (InputStream inputStream = Files.newInputStream(resource.getPath(), StandardOpenOption.READ))
                             {
                                 (envBuilder == null ? coreProperties : envProperties).load(inputStream);
@@ -1894,7 +1897,7 @@ public class XmlConfiguration
                         else if (arg.toLowerCase(Locale.ENGLISH).endsWith(".xml"))
                         {
                             // Create an XmlConfiguration
-                            XmlConfiguration configuration = new XmlConfiguration(Resource.newResource(arg));
+                            XmlConfiguration configuration = new XmlConfiguration(ResourceFactory.of(mountContainer).newResource(arg));
 
                             // Copy Id map
                             if (lastCoreConfiguration != null)
